@@ -15,3 +15,4 @@
 	I belive this value is in miliseconds but I am not sure
 2/5/2020:
 	Disabled the ability to select the clear node
+
